--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -327,33 +327,35 @@ stop_ves()
 	local iter
 	local pids
 
-	if get_veinfo; then
-		get_parallel
-		for i in 0 1 2; do
-			iter=0;
-			pids=
-			velist=$(vzlist -o ctid -sbootorder)
-			for veid in $velist; do
-				echo "Shutting down CT $veid"
-				# Set fairsched parameters to maximum so
-				# CT will stop fast
-				$VZCTL set $veid --cpuunits 2000 --cpulimit 0 >/dev/null 2>&1
-				$VZCTL --skiplock stop $veid >/dev/null 2>&1 &
-				pids="$pids $!"
-				iter=$(($iter+1))
-				if [ ${iter} -gt ${PARALLEL} ]; then
-					for pid in ${pids}; do
-						wait ${pid}
-					done
-					pids=
-					iter=0
-				fi
-			done
-			for pid in $pids; do
-				wait $pid
-			done
-		done
+	if ! get_veinfo; then
+		return
 	fi
+
+	get_parallel
+	for i in 0 1 2; do
+		iter=0;
+		pids=
+		velist=$(vzlist -o ctid -sbootorder)
+		for veid in $velist; do
+			echo "Shutting down CT $veid"
+			# Set fairsched parameters to maximum so
+			# CT will stop fast
+			$VZCTL set $veid --cpuunits 2000 --cpulimit 0 >/dev/null 2>&1
+			$VZCTL --skiplock stop $veid >/dev/null 2>&1 &
+			pids="$pids $!"
+			iter=$(($iter+1))
+			if [ ${iter} -gt ${PARALLEL} ]; then
+				for pid in ${pids}; do
+					wait ${pid}
+				done
+				pids=
+				iter=0
+			fi
+		done
+		for pid in $pids; do
+			wait $pid
+		done
+	done
 }
 
 umount_ves()
