etc/init.d/vz-redhat: add missing locals to stop_ves()
And put them all to a single line

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -322,10 +322,7 @@ start_ves()
 
 stop_ves()
 {
-	local veid
-	local velist
-	local iter
-	local pids
+	local veid velist i iter pid pids
 
 	if ! get_veinfo; then
 		return
