etc/Makefile.am: don't list conf files twice, add CLEANFILES
Since commit 3dd31a1 vz.conf is autogenerated from vz.conf.in,
while other .conf files are not. Use make feature to remove the
.in suffix in order to not list the files twice.

Also, add vz.conf to CLEANFILES since it's autogenerated.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/Makefile.am
+++ b/etc/Makefile.am
@@ -27,8 +27,9 @@ SUBDIRS = \
 	network-scripts \
 	udev
 
-pkgconf_DATA =  vz.conf osrelease.conf download.conf
 EXTRA_DIST = vz.conf.in osrelease.conf download.conf
+CLEANFILES = vz.conf
+pkgconf_DATA = $(EXTRA_DIST:%.in=%)
 
 install-data-local:
 	$(mkinstalldirs) $(DESTDIR)$(namesdir)
