Makefile.am: we only need .bz2 for make rpms
We use tar.bz2 as a source archive to make rpms, so depend on dist-bzip2
rather than dist (which makes both tar.gz and tar.bz2).

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -71,7 +71,7 @@ install-data-hook:
 	@echo "	Please invoke make with the target for your distribution!"
 	@echo "	*********************************************************"
 
-rpms: dist
+rpms: dist-bzip2
 	cp $(distdir).tar.bz2 `rpm --eval %_sourcedir`
 	rpmbuild -ba vzctl.spec
 
