etc/init.d/vz-redhat: add more locals to stop_ves
Fixup after commit 537888a. For some reason the gentoo script was OK.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -322,7 +322,7 @@ start_ves()
 
 stop_ves()
 {
-	local veid velist i iter pid pids
+	local veid velist i iter pid pids msg stage stages
 
 	if ! get_veinfo; then
 		return
