--- a/scripts/vps-functions.in
+++ b/scripts/vps-functions.in
@@ -33,8 +33,7 @@ VZ_CHANGEPASS=74
 VZ_CANT_ADDIP=34
 VZ_IP_INUSE=78
 
-# iptables parameters
-VE_STATE_DIR="/var/lib/vzctl/veip/"
+VE_STATE_DIR="@VEIPDUMPDIR@"
 CONF_DIR="@PKGCONFDIR@/conf/"
 
 ARPSEND_CMD="arpsend -c 1 -w 1"
