--- a/pathsubst.am
+++ b/pathsubst.am
@@ -23,6 +23,7 @@ pathsubst_RULES = \
 	s!@'VPSCONFDIR'@!$(vpsconfdir)!g; \
 	s!@'PKGDATADIR'@!$(pkgdatadir)!g; \
 	s!@'SCRIPTDIR'@!$(scriptdir)!g; \
+	s!@'VEIPDUMPDIR'@!$(veipdumpdir)!g; \
 	s!@'VZDIR'@!$(vzdir)!g;
 
 pathsubst = sed -e '$(pathsubst_RULES)'
