etc/init.d/vz*: fix vzlist invocation in stop_ve(s)
Option -H was forgotten.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -197,7 +197,7 @@ stop_ve() {
 		for ((i = 0; i <= 2; i++)); do
 			iter=0
 			pids=
-			velist=$(vzlist -o ctid -sbootorder)
+			velist=$(vzlist -H -o ctid -sbootorder)
 			for veid in ${velist}; do
 				ebegin "$msg $veid"
 				# Set fairsched parameters to maximum so
