--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -342,7 +342,7 @@ stop_ves()
 		for i in 0 1 2; do
 			iter=0;
 			pids=
-			velist=$(vzlist -o ctid -sbootorder)
+			velist=$(vzlist -H -o ctid -sbootorder)
 			for veid in $velist; do
 				echo $msg $veid
 				# Set fairsched parameters to maximum so
