etc/init.d/vz* stop: add pre-stop stage
(1) Before stopping/suspending all CTs, set the same value for their
    cpuunits for them to have equal abilities to stop. Before this patch,
    we were setting cpuunits for CTs one by one, and high cpuunits value
    for some CTs that stop later might cause a slowdown.

(2) Unset cpulimit only before stopping CT (doesn't make sense to do
    before suspending).

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -183,6 +183,12 @@ stop_ve() {
 		return
 	fi
 
+	# Pre-stop stage
+	velist=$(vzlist -1)
+	for veid in $velist; do
+		# Equalize cpuunits for all CTs
+		$VZCTL set $veid --cpuunits 2000 >/dev/null 2>&1
+	done
 	get_parallel
 	stages="suspend stop"
 	for stage in $stages; do
@@ -200,9 +206,10 @@ stop_ve() {
 			velist=$(vzlist -H -o ctid -sbootorder)
 			for veid in ${velist}; do
 				ebegin "$msg $veid"
-				# Set fairsched parameters to maximum so
-				# CT will stop fast
-				${VZCTL} set ${veid} --cpuunits 2000 --cpulimit 0 >/dev/null 2>&1
+				if [ "$stage" = "stop" ]; then
+					# Unset cpulimit for CT to stop fast
+					$VZCTL set $veid --cpulimit 0 >/dev/null 2>&1
+				fi
 				${VZCTL} --skiplock $stage ${veid} >/dev/null 2>&1 &
 				pids="${pids} $!"
 				let iter++
