etc/init.d/vz*: restore running containers after reboot
On vz stop, save CTIDs of all running containers to /var/lib/vzctl/vzreboot

On vz start, start containers with saved IDs (plus the ones marked with ONBOOT=yes)

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -42,6 +42,7 @@ install-data-local:
 	$(mkinstalldirs) -m 700 $(DESTDIR)$(vzprivdir)
 	$(mkinstalldirs) -m 700 $(DESTDIR)$(vzrootdir)
 	$(mkinstalldirs) $(DESTDIR)$(veipdumpdir)
+	$(mkinstalldirs) $(DESTDIR)$(vzrebootdir)
 	$(mkinstalldirs) $(DESTDIR)$(modulesdir)
 
 DISTRO_TARGETS = \
