--- a/etc/init.d/initd-functions.in
+++ b/etc/init.d/initd-functions.in
@@ -13,6 +13,7 @@ rc_done='..done'
 rc_failed='..failed'
 
 VARLOCK=/var/lock/subsys
+VZREBOOTDIR=@VZREBOOTDIR@
 
 # Source function library.
 if [ -r /etc/init.d/functions ]; then
