--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -132,9 +132,11 @@ stop_net() {
 start_ve() {
 	local veid velist msg need_restart=""
 
-	# get all containers we should start on boot
-	velist=$(vzlist -aH -octid,onboot -s-bootorder |
-		awk '$2 == "yes" {print $1}')
+	# List CTs from vzrebootdir plus the ones with ONBOOT=yes
+	velist=$(ls $VZREBOOTDIR;
+		vzlist -aH -octid,onboot | awk '$2 == "yes" {print $1}')
+	# Then sort by bootorder
+	velist=$(vzlist -aH -octid -s-bootorder $velist)
 
 	/sbin/sysctl -q -w net.ipv4.route.src_check=0
 
@@ -149,6 +151,7 @@ start_ve() {
 				fi
 			fi
 		fi
+		rm -f $VZREBOOTDIR/$veid
 		msg=$(${VZCTL} start ${veid} 2>&1)
 		eend $? "${msg}"
 	done
@@ -188,6 +191,8 @@ stop_ve() {
 	for veid in $velist; do
 		# Equalize cpuunits for all CTs
 		$VZCTL set $veid --cpuunits 2000 >/dev/null 2>&1
+		# Save to vzreboot list
+		touch $VZREBOOTDIR/$veid
 	done
 	get_parallel
 	stages="suspend stop"
