etc/init.d/vz*: eliminate "Container(s) not found" msg
When doing vz stop, most probably all CTs will suspend fine during the
first stage, so after it vzlist return nothing but do this:

	++ vzlist -H -o ctid -sbootorder
	Container(s) not found

To fix, redirect its stderr to /dev/null

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -187,7 +187,7 @@ stop_ve() {
 	fi
 
 	# Pre-stop stage
-	velist=$(vzlist -1)
+	velist=$(vzlist -1 2>/dev/null)
 	for veid in $velist; do
 		# Equalize cpuunits for all CTs
 		$VZCTL set $veid --cpuunits 2000 >/dev/null 2>&1
@@ -208,7 +208,7 @@ stop_ve() {
 		for ((i = 0; i <= 2; i++)); do
 			iter=0
 			pids=
-			velist=$(vzlist -H -o ctid -sbootorder)
+			velist=$(vzlist -H -o ctid -sbootorder 2>/dev/null)
 			for veid in ${velist}; do
 				ebegin "$msg $veid"
 				if [ "$stage" = "stop" ]; then
