vzevent-stop: workaround for F17 that doesn't call reboot()
The problem is systemd from Fedora 17 doesn't invoke reboot()
syscall at all, so kernel doesn't know if CT is rebooted and send us
stop event instead of reboot event.

The workaround has two parts

1 vzdummy-systemd-f17 package installed inside an F17-based container
  have /usr/lib/systemd/system/vzreboot.service file (and a symlink
  to it from /lib/systemd/system/reboot.target.wants/) which does this:

	[Unit]
	Description=Tell that Container is rebooted
	ConditionPathExists=/proc/vz
	ConditionPathExists=!/proc/bc
	Before=reboot.service
	DefaultDependencies=no

	[Service]
	Type=forking
	ExecStart=/bin/touch /reboot
	TimeoutSec=0
	RemainAfterExit=no

2 This patch, that checks existence of $VE_ROOT/reboot file and
  execs vzctl start.

So, container will be restarted even if it doesn't do reboot()

We do sourcing vz.conf and $veid.conf in a subshell to not clog
the current shell with lots of environment variables.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/scripts/vzevent-stop.in
+++ b/scripts/vzevent-stop.in
@@ -49,6 +49,19 @@ while vzctl --quiet status $VEID | fgrep -w running; do
 	test $I -gt 10 && exit 1
 done
 
+# Workaround for Fedora 17, see http://bugzilla.openvz.org/2336
+# If $VE_ROOT/reboot file is present, rm it and restart CT
+(
+	. @PKGCONFDIR@/vz.conf
+	. $CONF_DIR/$VEID.conf
+	test -f $VE_ROOT/reboot || exit 0
+	$(awk '$2 == "'$VE_ROOT'" && $4 !~ "^rw" {
+		print "mount -oremount,rw",$1,$2}' /proc/mounts)
+	rm -f $VE_ROOT/reboot
+	exit 111
+)
+test $? -eq 111 && exec vzctl --quiet start $VEID
+
 if vzctl --quiet status $VEID | fgrep -w mounted; then
 	vzctl --quiet umount $VEID
 fi
