--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -295,7 +295,7 @@ start_ves()
 	velist=$(ls $VZREBOOTDIR;
 		vzlist -aH -octid,onboot | awk '$2 == "yes" {print $1}')
 	# Then sort by bootorder
-	velist=$(vzlist -aH -octid -s-bootorder $velist)
+	test -n "$velist" && velist=$(vzlist -aH -octid -s-bootorder $velist)
 	sysctl -q -w net.ipv4.route.src_check=0
 	for veid in $velist; do
 		[ "${veid}" = "0" ] && continue
