etc/init.d/vz*: only apply oom score if file exist
OOM score adjustment is only available in RHEL6-based kernel.
Check that proc file exist before trying to write to it.

http://bugzilla.openvz.org/2423

Reported-by: Tom P <tomp@tomp.co.uk>
Signed-off-by: Kir Kolyshkin <kir@openvz.org>
(cherry picked from commit 8c3a5cf71d7abab2d2d31a7b28005f48bdc10c54)

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -323,9 +323,11 @@ start() {
 		return 1
 	fi
 
-	ebegin "Applying OOM adjustments"
-	cat /etc/vz/oom-groups.conf > /proc/vz/oom_score_adj
-	eend $?
+	if [ -f /proc/vz/oom_score_adj ]; then
+		ebegin "Applying OOM adjustments"
+		cat /etc/vz/oom-groups.conf > /proc/vz/oom_score_adj
+		eend $?
+	fi
 
 	start_net
 	setup_ve0
