etc/init.d/vz-gentoo: fix a log message
All ebegin lines except one do not end with a semicolon.
Fix the one that have it.

Signed-off-by: Kir Kolyshkin <kir@openvz.org>

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -75,7 +75,7 @@ setup_ve0() {
 	test -f ${ve0conf} || return
 	egrep -q '^ONBOOT=yes\|^ONBOOT=\"yes\"' ${ve0conf} || return
 
-	ebegin "Configuring hardware node UB resources: "
+	ebegin "Configuring hardware node UB resources"
 	msg=$(${VZCTL} set 0 --reset_ub 2>&1)
 	eend $? ${msg}
 }
