provide a upstream alternative for ub functions
The ub functions will not be ever supported in upstream kernel.
Still, they are called in a quite widespread fashion throughout the
code.

One possible course of action for this, is to skip the compilation
of ub.c, and at the same time provide an empty set of inline functions
in ub.h

[kir@openvz.org: remove #error, add comments #else/#endif */

Signed-off-by: Glauber Costa <glommer@parallels.com>

--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -57,7 +57,6 @@ libvzctl_la_SOURCES = bitmap.c \
                       readelf.c \
                       res.c \
                       script.c \
-                      ub.c \
                       util.c \
                       veth.c \
                       vps_configure.c \
@@ -72,4 +71,8 @@ libvzctl_la_LIBADD = $(XML_LIBS) $(CGROUP_LIBS) $(DL_LIBS)
 
 if HAVE_CGROUP
 libvzctl_la_SOURCES += cgroup.c hooks_ct.c
+endif
+
+if HAVE_VZ_KERNEL
+libvzctl_la_SOURCES += ub.c
 endif
