don't compile hooks_vz.c if vz-kernel support is not enabled.
Signed-off-by: Glauber Costa <glommer@parallels.com>
(cherry picked from commit 9c9c0658ecc49516a649af5151227c7e42bb8838)

--- a/src/lib/Makefile.am
+++ b/src/lib/Makefile.am
@@ -40,7 +40,6 @@ libvzctl_la_SOURCES = bitmap.c \
                       dev.c \
                       dist.c \
                       env.c \
-                      hooks_vz.c \
                       exec.c \
                       fs.c \
                       fs_simfs.c \
@@ -74,5 +73,5 @@ libvzctl_la_SOURCES += cgroup.c hooks_ct.c
 endif
 
 if HAVE_VZ_KERNEL
-libvzctl_la_SOURCES += ub.c
+libvzctl_la_SOURCES += ub.c hooks_vz.c
 endif
