Implement VE_STOP_MODE global config parameter
It can be set to either 'suspend' or 'stop', with suspend being
the default. Man page modified accordingly.

http://bugzilla.openvz.org/2432

Signed-off-by: Kir Kolyshkin <kir@openvz.org>
(cherry picked from commit ab3da01a91e0a39fb2b2ad4452d201f6e2b2f0b5)

--- a/etc/init.d/vz-redhat.in
+++ b/etc/init.d/vz-redhat.in
@@ -342,7 +342,10 @@ stop_ves()
 	done
 
 	get_parallel
-	stages="suspend stop"
+	stages="stop"
+	if [ -z "${VE_STOP_MODE}" -o "$VE_STOP_MODE" = "suspend" ]; then
+		stages="suspend stop"
+	fi
 	for stage in $stages; do
 		case $stage in
 			suspend)
