etc/init.d/vz-gentoo: add VE_STOP_MODE handling
This is an addition to previous commit ab3da01

http://bugzilla.openvz.org/2432

Signed-off-by: Kir Kolyshkin <kir@openvz.org>
(cherry picked from commit d60393a2cc22fffef36d54adb5e1323dfb21aea2)

--- a/etc/init.d/vz-gentoo.in
+++ b/etc/init.d/vz-gentoo.in
@@ -19,6 +19,7 @@ check_config() {
 	: ${VPSCONFDIR:=@VPSCONFDIR@}
 	: ${VZDEV:=venet0}
 	: ${VZCONF:=@PKGCONFDIR@/vz.conf}
+	: ${VE_STOP_MODE:=suspend}
 
 	if [ "${MODULES_DISABLED}" != "yes" ]; then
 		: ${IPTABLES_MODULES:="${IPTABLES}"}
@@ -195,7 +196,8 @@ stop_ve() {
 		touch $VZREBOOTDIR/$veid
 	done
 	get_parallel
-	stages="suspend stop"
+	stages="stop"
+	[ "$VE_STOP_MODE" = "suspend" ] && stages="suspend stop"
 	for stage in $stages; do
 		case $stage in
 			suspend)
